tmp/myesbase/objects/Space__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building Block Room</fullName>
                </value>
                <value>
                    <fullName>Café</fullName>
                </value>
                <value>
                    <fullName>Cooking Classroom</fullName>
                </value>
                <value>
                    <fullName>Drawing/Watercolor Studio</fullName>
                </value>
                <value>
                    <fullName>Exploration Lab</fullName>
                </value>
                <value>
                    <fullName>Game Room/Arcade</fullName>
                </value>
                <value>
                    <fullName>Music Room</fullName>
                </value>
                <value>
                    <fullName>Sand Drawing Tables</fullName>
                </value>
                <value>
                    <fullName>Temporary Terrace</fullName>
                </value>
                <value>
                    <fullName>Walking Meditation Paths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Booking_Rate__c</fullName>
        <label>Base Daily Booking Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Capacity__c</fullName>
        <label>Minimum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Predicted_Booking_Rate__c</fullName>
        <label>Predicted Booking Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Predicted_Demand__c</fullName>
        <label>Predicted Demand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Types</valueSetName>
        </valueSet>
    </fields>
    <label>Space</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>